Home page - create pre section - w\ adaptive.

--- a/dest/index.html
+++ b/dest/index.html
@@ -39,7 +39,19 @@
       </div>
     </header>
     <!-- HEADER :: END-->
-    <div class="body p-home"></div>
+    <div class="body p-home">
+      <!-- SECTION pre :: START-->
+      <section class="pre" id="pre">
+        <div class="c-grid">
+          <div class="pre__wrapper">
+            <h2 class="pre__title c-title">PRE-REGISTER NOW</h2>
+            <p class="pre__desc">Join a community of the brightest young minds from world-leading Universities</p><a class="pre__btn c-btn c-btn--bg" href="#" title="">PRE-REGISTER</a>
+            <p class="pre__info">Applications open <span>12/02/2019</span></p>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION pre :: END-->
+    </div>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
       <div class="c-grid">
