--- a/dest/index.html
+++ b/dest/index.html
@@ -40,6 +40,28 @@
     </header>
     <!-- HEADER :: END-->
     <div class="body p-home">
+      <!-- SECTION advantages :: START-->
+      <section class="advantages" id="advantages">
+        <div class="c-grid">
+          <div class="advantages__wrapper">
+            <div class="advantages__block-wrapper">
+              <div class="advantages__block advantages__block-0">
+                <p class="advantages__block-count"><span>100</span> +</p>
+                <p class="advantages__block-desc">Projects</p>
+              </div>
+              <div class="advantages__block advantages__block-1">
+                <p class="advantages__block-count"><span>1,000</span> +</p>
+                <p class="advantages__block-desc">Scientists</p>
+              </div>
+              <div class="advantages__block advantages__block-2">
+                <p class="advantages__block-count"><span>100,000</span> +</p>
+                <p class="advantages__block-desc">Freelance hours</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION advantages :: END-->
       <!-- SECTION pre :: START-->
       <section class="pre" id="pre">
         <div class="c-grid">
