--- a/dest/index.html
+++ b/dest/index.html
@@ -40,6 +40,43 @@
     </header>
     <!-- HEADER :: END-->
     <div class="body p-home">
+      <!-- SECTION info :: START-->
+      <section class="info" id="info">
+        <div class="info__wrapper info__wrapper-0">
+          <div class="c-grid">
+            <div class="info__block info__block-0">
+              <div class="info__block-left"><img src="./img/work-mind.png" srcset="./img/work-mind@2x.png 2x" alt="" title=""></div>
+              <div class="info__block-right">
+                <h2 class="info__title c-title">WORK YOUR <span class='c-title--color'>MIND</span></h2>
+                <p class="info__desc">Our projects are intellectually stimulating and financially rewarding. From researching peer-reviewed journals to making sense of complex data and communicating scientific results - you’re free to join projects that most suit your experience and skill set.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="info__wrapper info__wrapper-1">
+          <div class="c-grid">
+            <div class="info__block info__block-1">
+              <div class="info__block-left"><img src="./img/earncash.png" srcset="./img/earncash@2x.png 2x" alt="" title=""></div>
+              <div class="info__block-right">
+                <h2 class="info__title c-title"><span class='c-title--color'>EARN</span> FEES</h2>
+                <p class="info__desc">Zero-hierarchy, zero-obligation. Choose when (and how much) to get involved based on what motivates you, whether that be passion, skill or need. In return for contributing great work, you earn fair and flexible consulting fees.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="info__wrapper info__wrapper-2">
+          <div class="c-grid">
+            <div class="info__block info__block-2">
+              <div class="info__block-left"><img src="./img/logos.png" srcset="./img/logos@2x.png 2x" alt="" title=""></div>
+              <div class="info__block-right">
+                <h2 class="info__title c-title">GO <span class='c-title--color'>FAR</span></h2>
+                <p class="info__desc">Supercharge your CV and stand out from the crowd. Gain commercial experience on live projects for industry-leading R&D companies, as well as access to training and a lifelong network of peers that will support you long into your career. </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION info :: END-->
       <!-- SECTION advantages :: START-->
       <section class="advantages" id="advantages">
         <div class="c-grid">
