Home page - create flexible section - w\ adaptive.

--- a/dest/index.html
+++ b/dest/index.html
@@ -40,6 +40,22 @@
     </header>
     <!-- HEADER :: END-->
     <div class="body p-home">
+      <!-- SECTION flexible :: START-->
+      <section class="flexible" id="flexible">
+        <div class="c-grid">
+          <div class="flexible__wrapper">
+            <div class="flexible__wrapper-left">
+              <h2 class="flexible__title"><span>HYPER-FLEXIBLE</span> <br>VIRTUAL WORKING</h2>
+              <p class="flexible__desc">You’re in control. In this digital age of virtual work, our platform is designed with you in mind - to make it as easy as possible to fit paid, online consulting work around life’s other commitments.</p>
+            </div>
+            <div class="flexible__wrapper-right">
+              <div><img src="./img/info-main.png" srcset="./img/info-main@2x.png 2x" alt="" title=""></div>
+              <div><img src="./img/mockuptwo.png" srcset="./img/mockuptwo@2x.png 2x" alt="" title=""><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION flexible :: END-->
       <!-- SECTION info :: START-->
       <section class="info" id="info">
         <div class="info__wrapper info__wrapper-0">
@@ -110,6 +126,27 @@
         </div>
       </section>
       <!-- SECTION pre :: END-->
+      <!-- SECTION think :: START-->
+      <section class="think" id="think">
+        <div class="c-grid-fluid">
+          <div class="think__wrapper">
+            <h2 class="think__title">WHAT DO THE <span>ASSOCIATES THINK?</span></h2>
+            <div class="think__slider">
+              <div class="swiper-container swiper-container-think">
+                <div class="swiper-wrapper">
+                                <div class="swiper-slide">1</div>
+                                <div class="swiper-slide">2</div>
+                                <div class="swiper-slide">3</div>
+                                <div class="swiper-slide">4</div>
+                                <div class="swiper-slide">5</div>
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION think :: END-->
     </div>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
