Home page - create think section - w\ adaptive.

--- a/dest/index.html
+++ b/dest/index.html
@@ -134,11 +134,97 @@
             <div class="think__slider">
               <div class="swiper-container swiper-container-think">
                 <div class="swiper-wrapper">
-                                <div class="swiper-slide">1</div>
-                                <div class="swiper-slide">2</div>
-                                <div class="swiper-slide">3</div>
-                                <div class="swiper-slide">4</div>
-                                <div class="swiper-slide">5</div>
+                                <div class="swiper-slide">
+                                  <p class="swiper-slide-title">Amazing way to earn cash</p>
+                                  <p class="swiper-slide-desc">It’s great that I can earn and build my CV at the same time, I don’t have a lot of time out of labs so being to work on projects in my spare time and from anyewhere is ideal for me .</p>
+                                  <div class="swiper-slide-user">
+                                    <div>
+                                      <div class="swiper-slide-circle"><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+                                    </div>
+                                    <div>
+                                      <p>David Davidson</p><span>PHD Student, Bioengineering, Imperial College London</span>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide-content"><span></span><span></span><span></span><span></span><span></span><span></span></div>
+                                </div>
+                                <div class="swiper-slide">
+                                  <p class="swiper-slide-title">Amazing way to earn cash</p>
+                                  <p class="swiper-slide-desc">It’s great that I can earn and build my CV at the same time, I don’t have a lot of time out of labs so being to work on projects in my spare time and from anyewhere is ideal for me .</p>
+                                  <div class="swiper-slide-user">
+                                    <div>
+                                      <div class="swiper-slide-circle"><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+                                    </div>
+                                    <div>
+                                      <p>David Davidson</p><span>PHD Student, Bioengineering, Imperial College London</span>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide-content"><span></span><span></span><span></span><span></span><span></span><span></span></div>
+                                </div>
+                                <div class="swiper-slide">
+                                  <p class="swiper-slide-title">Amazing way to earn cash</p>
+                                  <p class="swiper-slide-desc">It’s great that I can earn and build my CV at the same time, I don’t have a lot of time out of labs so being to work on projects in my spare time and from anyewhere is ideal for me .</p>
+                                  <div class="swiper-slide-user">
+                                    <div>
+                                      <div class="swiper-slide-circle"><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+                                    </div>
+                                    <div>
+                                      <p>David Davidson</p><span>PHD Student, Bioengineering, Imperial College London</span>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide-content"><span></span><span></span><span></span><span></span><span></span><span></span></div>
+                                </div>
+                                <div class="swiper-slide">
+                                  <p class="swiper-slide-title">Amazing way to earn cash</p>
+                                  <p class="swiper-slide-desc">It’s great that I can earn and build my CV at the same time, I don’t have a lot of time out of labs so being to work on projects in my spare time and from anyewhere is ideal for me .</p>
+                                  <div class="swiper-slide-user">
+                                    <div>
+                                      <div class="swiper-slide-circle"><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+                                    </div>
+                                    <div>
+                                      <p>David Davidson</p><span>PHD Student, Bioengineering, Imperial College London</span>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide-content"><span></span><span></span><span></span><span></span><span></span><span></span></div>
+                                </div>
+                                <div class="swiper-slide">
+                                  <p class="swiper-slide-title">Amazing way to earn cash</p>
+                                  <p class="swiper-slide-desc">It’s great that I can earn and build my CV at the same time, I don’t have a lot of time out of labs so being to work on projects in my spare time and from anyewhere is ideal for me .</p>
+                                  <div class="swiper-slide-user">
+                                    <div>
+                                      <div class="swiper-slide-circle"><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+                                    </div>
+                                    <div>
+                                      <p>David Davidson</p><span>PHD Student, Bioengineering, Imperial College London</span>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide-content"><span></span><span></span><span></span><span></span><span></span><span></span></div>
+                                </div>
+                                <div class="swiper-slide">
+                                  <p class="swiper-slide-title">Amazing way to earn cash</p>
+                                  <p class="swiper-slide-desc">It’s great that I can earn and build my CV at the same time, I don’t have a lot of time out of labs so being to work on projects in my spare time and from anyewhere is ideal for me .</p>
+                                  <div class="swiper-slide-user">
+                                    <div>
+                                      <div class="swiper-slide-circle"><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+                                    </div>
+                                    <div>
+                                      <p>David Davidson</p><span>PHD Student, Bioengineering, Imperial College London</span>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide-content"><span></span><span></span><span></span><span></span><span></span><span></span></div>
+                                </div>
+                                <div class="swiper-slide">
+                                  <p class="swiper-slide-title">Amazing way to earn cash</p>
+                                  <p class="swiper-slide-desc">It’s great that I can earn and build my CV at the same time, I don’t have a lot of time out of labs so being to work on projects in my spare time and from anyewhere is ideal for me .</p>
+                                  <div class="swiper-slide-user">
+                                    <div>
+                                      <div class="swiper-slide-circle"><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+                                    </div>
+                                    <div>
+                                      <p>David Davidson</p><span>PHD Student, Bioengineering, Imperial College London</span>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide-content"><span></span><span></span><span></span><span></span><span></span><span></span></div>
+                                </div>
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
