--- a/dest/index.html
+++ b/dest/index.html
@@ -34,8 +34,45 @@
   <body>
     <!-- HEADER :: START-->
     <header class="header" id="header">
+      <div class="header__bg"></div>
       <div class="c-grid">
-        <div class="header__wrapper"></div>
+        <div class="header__wrapper">
+          <div class="header__wrapper-left"><a class="logo logo--header" href="#" title="">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 268 67">
+                <title>logo-header</title>
+                <g id="Layer_2" data-name="Layer 2">
+                  <g id="Layer_1-2" data-name="Layer 1">
+                    <g>
+                      <polygon points="43.89 20.44 46.61 26.56 43.91 20.4 43.89 20.44" style="fill: #ee306d"></polygon>
+                      <polygon points="155.14 31.16 157.2 26.57 155.11 31.16 155.14 31.16" style="fill: #ee306d"></polygon>
+                      <path d="M80.14,31.38v0Z" style="fill: #ee306d"></path>
+                      <path d="M132.28,32.44l0,0,0,1Z" style="fill: #ee306d"></path>
+                      <path d="M104,23.22a5,5,0,0,0-3.69,1.55,5.23,5.23,0,0,0-1.5,3.8,5.25,5.25,0,0,0,1.56,3.91,5.09,5.09,0,0,0,7.29,0,5.64,5.64,0,0,0,0-7.68A4.91,4.91,0,0,0,104,23.22Z" style="fill: #ee306d"></path>
+                      <path d="M61.54,31.38v0Z" style="fill: #ee306d"></path>
+                      <path d="M132.28,24.7v0l-.56-.39C131.91,24.42,132.1,24.54,132.28,24.7Z" style="fill: #ee306d"></path>
+                      <polygon points="41.7 30.32 42.97 30.3 41.71 30.3 41.7 30.32" style="fill: #ee306d"></polygon>
+                      <polygon points="36.87 35.91 38.93 31.35 36.85 35.91 36.87 35.91" style="fill: #ee306d"></polygon>
+                      <polygon points="161.25 22.58 162.11 20.65 162.09 20.61 161.25 22.58" style="fill: #ee306d"></polygon>
+                      <path d="M.29,0V51.36H0L133.33,67,266.67,51.36H268V0ZM50.72,36H48.3l0-.06L46.8,32.47h-6L39.26,36l0,.06H36.7l.06-.14,7.06-15.51.09-.2.09.2,6.81,15.51.06.14Zm16.54-1.09a4.55,4.55,0,0,1-3.35,1.36,4.42,4.42,0,0,1-3.13-1.16,5.37,5.37,0,0,1-1.52-3.23V31.8l.09,0,2.18-.5.1,0,0,.11a3.63,3.63,0,0,0,.5,1.73A2.09,2.09,0,0,0,64,34a2.13,2.13,0,0,0,1.6-.66,2.31,2.31,0,0,0,.63-1.67,2.27,2.27,0,0,0-.11-.75,1.68,1.68,0,0,0-.34-.61,2.31,2.31,0,0,0-.61-.54,5.47,5.47,0,0,0-.91-.49l-1.37-.59c-2-.85-3-2.13-3-3.79a3.64,3.64,0,0,1,1.26-2.82,4.47,4.47,0,0,1,3.12-1.15,4.39,4.39,0,0,1,3.94,2.5l0,.09-.08.05-1.75,1.06-.09.05,0-.09a3,3,0,0,0-.9-1.1,2.37,2.37,0,0,0-2.56.21,1.54,1.54,0,0,0-.55,1.21c0,.67.5,1.21,1.49,1.63l1.42.6a6.13,6.13,0,0,1,2.58,1.78,4.1,4.1,0,0,1,.82,2.6A4.62,4.62,0,0,1,67.26,34.92Zm18.6,0a4.55,4.55,0,0,1-3.35,1.36,4.41,4.41,0,0,1-3.13-1.16,5.37,5.37,0,0,1-1.52-3.23l0-.09.1,0,2.18-.5.1,0,0,.11a3.63,3.63,0,0,0,.5,1.73,2.09,2.09,0,0,0,1.86.9,2.14,2.14,0,0,0,1.6-.66,2.31,2.31,0,0,0,.63-1.67,2.27,2.27,0,0,0-.11-.75,1.84,1.84,0,0,0-.34-.61,2.31,2.31,0,0,0-.61-.54,5.47,5.47,0,0,0-.91-.49l-1.37-.59c-2-.85-3-2.13-3-3.79a3.64,3.64,0,0,1,1.26-2.82,4.47,4.47,0,0,1,3.12-1.15,4.39,4.39,0,0,1,3.94,2.5l.05.09-.09.05L85,24.63l-.09.05,0-.09a3,3,0,0,0-.9-1.1,2.14,2.14,0,0,0-1.14-.28,2.11,2.11,0,0,0-1.42.49,1.55,1.55,0,0,0-.56,1.21c0,.67.51,1.21,1.49,1.63l1.43.6a6.19,6.19,0,0,1,2.58,1.78,4.1,4.1,0,0,1,.82,2.6A4.62,4.62,0,0,1,85.86,34.92Zm23.48-.87a7.54,7.54,0,0,1-12.88-5.5,7.63,7.63,0,0,1,7.59-7.61,7.22,7.22,0,0,1,5.3,2.26,7.55,7.55,0,0,1,2.22,5.44A7.4,7.4,0,0,1,109.34,34.05Zm23-11.95v2.82l-.16-.14a5.85,5.85,0,0,0-3.8-1.57,4.79,4.79,0,0,0-3.63,1.58,5.44,5.44,0,0,0-1.49,3.86,5.31,5.31,0,0,0,1.49,3.81A4.9,4.9,0,0,0,128.43,34a4.3,4.3,0,0,0,1.89-.37,5.58,5.58,0,0,0,.91-.5,10.84,10.84,0,0,0,1-.77l.16-.14v2.94l0,0a7.75,7.75,0,0,1-3.93,1.09,7.22,7.22,0,0,1-5.29-2.22,7.48,7.48,0,0,1-2.18-5.38,7.72,7.72,0,0,1,1.83-5,7.22,7.22,0,0,1,5.81-2.72A7.34,7.34,0,0,1,132.33,22l0,0Zm12.44-.78V36h-2.35V21.22h2.35ZM169,31.26h-2.42l0-.06L165,27.66l-.88-2.07-2-4.75-2.06,4.61-.06.14-.88,2.07,0,.06-1.57,3.48,0,.06H155l.06-.14,7.06-15.51.09-.2.09.2,6.81,15.51.07.14Zm16.82-9.94v2.17h-3.27V36h-2.35V23.49H176.9V21.22h8.9Zm19.35,0v2.17h-5.71v3.3H205v2.28h-5.55v4.67h5.71V36h-8.06V21.22h8.06Zm18.49,13.6a4.56,4.56,0,0,1-3.35,1.36,4.41,4.41,0,0,1-3.13-1.16,5.37,5.37,0,0,1-1.52-3.23l0-.09.09,0,2.18-.5.11,0v.11a3.87,3.87,0,0,0,.5,1.73,2.34,2.34,0,0,0,3.47.24,2.31,2.31,0,0,0,.63-1.67,2.27,2.27,0,0,0-.11-.75,1.84,1.84,0,0,0-.34-.61,2.48,2.48,0,0,0-.61-.54,6.32,6.32,0,0,0-.91-.49l-1.38-.59c-2-.85-3-2.13-3-3.79a3.65,3.65,0,0,1,1.27-2.82,4.47,4.47,0,0,1,3.12-1.15,4.4,4.4,0,0,1,3.94,2.5l.05.09-.09.05-1.74,1.06-.09.05,0-.09a3.07,3.07,0,0,0-.9-1.1,2.14,2.14,0,0,0-1.14-.28,2.11,2.11,0,0,0-1.42.49,1.52,1.52,0,0,0-.56,1.21c0,.67.5,1.21,1.49,1.63l1.42.6a6.23,6.23,0,0,1,2.59,1.78,4.18,4.18,0,0,1,.82,2.6A4.62,4.62,0,0,1,223.64,34.92Z" style="fill: #ee306d"></path>
+                      <polygon points="162.16 15.69 164.85 21.76 162.17 15.65 162.16 15.69" style="fill: #ee306d"></polygon>
+                      <polygon points="41.81 30.2 45.84 30.2 43.87 25.59 41.81 30.2" style="fill: #ee306d"></polygon>
+                      <polygon points="45.97 30.25 45.99 30.25 45.37 28.86 45.97 30.25" style="fill: #ee306d"></polygon>
+                    </g>
+                  </g>
+                </g>
+              </svg></a>
+          </div>
+          <div class="header__wrapper-middle">
+            <div class="nav nav--header">
+              <ul class="nav__list">
+                <li class="nav__list-item"><a class="nav__list-btn" href="#" title="">Home</a></li>
+                <li class="nav__list-item"><a class="nav__list-btn" href="#" title="">What we do</a></li>
+                <li class="nav__list-item"><a class="nav__list-btn" href="#" title="">Who we are</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="header__wrapper-right"><a class="header__btn header__btn-pre" href="#" title="">pre-register</a><a class="header__btn header__btn-login" href="#" title="">Log in</a></div>
+        </div>
       </div>
     </header>
     <!-- HEADER :: END-->
