Home page - create main section - w\ adaptive.

--- a/dest/index.html
+++ b/dest/index.html
@@ -77,6 +77,26 @@
     </header>
     <!-- HEADER :: END-->
     <div class="body p-home">
+      <!-- SECTION :: START-->
+      <section class="main" id="main">
+        <div class="main__bg">
+          <div class="main__bg-left"></div>
+          <div class="main__bg-right"><img src="./img/img-main-bg.png" srcset="./img/img-main-bg@2x.png 2x" alt="" title=""></div>
+        </div>
+        <div class="c-grid">
+          <div class="main__wrapper">
+            <div class="main__wrapper-left">
+              <h1 class="main__title">WHERE DEEP SCIENCE MEETS BUSINESS</h1>
+              <p class="main__subtitle">Together, we help companies get smarter about the future impact of emerging technologies</p><a class="main__btn c-btn c-btn--bg" href="#" title="">PRE-REGISTER</a>
+              <p class="main__info">Applications open <span>12/02/2019</span></p>
+              <p class="main__from main__from-0">Open to PhDs, postdocs, academics and alumni from:</p>
+              <p class="main__from main__from-1">University College London | Imperial College London | University of Cambridge</p>
+            </div>
+            <div class="main__wrapper-right"></div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION :: END-->
       <!-- SECTION flexible :: START-->
       <section class="flexible" id="flexible">
         <div class="c-grid">
