--- a/dest/index.html
+++ b/dest/index.html
@@ -105,8 +105,8 @@
               <h2 class="flexible__title"><span>HYPER-FLEXIBLE</span> <br>VIRTUAL WORKING</h2>
               <p class="flexible__desc">You’re in control. In this digital age of virtual work, our platform is designed with you in mind - to make it as easy as possible to fit paid, online consulting work around life’s other commitments.</p>
             </div>
-            <div class="flexible__wrapper-right">
-              <div><img src="./img/info-main.png" srcset="./img/info-main@2x.png 2x" alt="" title=""></div>
+            <div class="flexible__wrapper-right" parallax-js>
+              <div data-stellar-ratio="0.95"><img src="./img/info-main.png" srcset="./img/info-main@2x.png 2x" alt="" title=""></div>
               <div><img src="./img/mockuptwo.png" srcset="./img/mockuptwo@2x.png 2x" alt="" title=""><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
             </div>
           </div>
@@ -156,15 +156,18 @@
           <div class="advantages__wrapper">
             <div class="advantages__block-wrapper">
               <div class="advantages__block advantages__block-0">
-                <p class="advantages__block-count"><span>100</span> +</p>
+                <p class="advantages__block-count viewport-hide-js"><span data-from="0" data-to="100" data-speed="1500" data-refresh-interval="50" advantages-num-js>100</span>&nbsp;+
+                </p>
                 <p class="advantages__block-desc">Projects</p>
               </div>
               <div class="advantages__block advantages__block-1">
-                <p class="advantages__block-count"><span>1,000</span> +</p>
+                <p class="advantages__block-count viewport-hide-js"><span data-from="100" data-to="1000" data-speed="1500" data-refresh-interval="50" advantages-num-js>1000</span>&nbsp;+
+                </p>
                 <p class="advantages__block-desc">Scientists</p>
               </div>
               <div class="advantages__block advantages__block-2">
-                <p class="advantages__block-count"><span>100,000</span> +</p>
+                <p class="advantages__block-count viewport-hide-js"><span data-from="1000" data-to="100000" data-speed="1500" data-refresh-interval="50" advantages-num-js>100000</span>&nbsp;+
+                </p>
                 <p class="advantages__block-desc">Freelance hours</p>
               </div>
             </div>
