What we do page - create main section - w\ adaptive.

--- a/dest/do.html
+++ b/dest/do.html
@@ -79,8 +79,17 @@
     <div class="body p-do">
       <!-- SECTION main :: START-->
       <section class="d-main" id="d-main">
+        <div class="d-main__bg">
+          <div class="d-main__bg-left"><img src="./img/img-dMain-left.png" srcset="./img/img-dMain-left@2x.png 2x" alt="" title=""></div>
+          <div class="d-main__bg-right"><img src="./img/img-dMain-right.png" srcset="./img/img-dMain-right@2x.png 2x" alt="" title=""></div>
+        </div>
         <div class="c-grid">
-          <div class="d-main__wrapper"></div>
+          <div class="d-main__wrapper">
+            <h1 class="d-main__title c-title">A MEETING OF <span class='c-title--color'>MANY MINDS</span></h1>
+            <p class="d-main__desc d-main__desc-0 d-main__desc--pb">We are an invitation-only network of the brightest minds at the forefront of science, technology and engineering.</p>
+            <p class="d-main__desc d-main__desc-1 d-main__desc--pb">Altogether, we constitute 1000’s of postgraduate researchers, academics and alumni. A community of talented, like-minded young scientists from world-leading universities sharing a common goal - to help industry understand how the global technology landscape is being shaped by science-driven innovation.</p>
+            <p class="d-main__desc d-main__desc-2">It is the diversity of our Associates’ intellect and insight that drives our success – that’s why we’re selective about who we take on board.</p>
+          </div>
         </div>
       </section>
       <!-- SECTION main :: END-->
