What we do page - create network section - w\ adaptive.

--- a/dest/index.html
+++ b/dest/index.html
@@ -65,9 +65,9 @@
           <div class="header__wrapper-middle">
             <div class="nav nav--header">
               <ul class="nav__list">
-                <li class="nav__list-item"><a class="nav__list-btn" href="#" title="">Home</a></li>
-                <li class="nav__list-item"><a class="nav__list-btn" href="#" title="">What we do</a></li>
-                <li class="nav__list-item"><a class="nav__list-btn" href="#" title="">Who we are</a></li>
+                <li class="nav__list-item"><a class="nav__list-btn" href="/" title="">Home</a></li>
+                <li class="nav__list-item"><a class="nav__list-btn" href="do.html" title="">What we do</a></li>
+                <li class="nav__list-item"><a class="nav__list-btn" href="are.html" title="">Who we are</a></li>
               </ul>
             </div>
           </div>
@@ -337,9 +337,9 @@
           <div class="footer__wrapper-right">
             <div class="nav nav--footer">
               <ul class="nav__list">
-                <li class="nav__list-item"><a class="nav__list-btn" href="#" title="">Home</a></li>
-                <li class="nav__list-item"><a class="nav__list-btn" href="#" title="">What we do</a></li>
-                <li class="nav__list-item"><a class="nav__list-btn" href="#" title="">Who we are</a></li>
+                <li class="nav__list-item"><a class="nav__list-btn" href="/" title="">Home</a></li>
+                <li class="nav__list-item"><a class="nav__list-btn" href="do.html" title="">What we do</a></li>
+                <li class="nav__list-item"><a class="nav__list-btn" href="are.html" title="">Who we are</a></li>
               </ul>
             </div>
           </div>
