--- a/dest/do.html
+++ b/dest/do.html
@@ -65,9 +65,9 @@
           <div class="header__wrapper-middle">
             <div class="nav nav--header">
               <ul class="nav__list">
-                <li class="nav__list-item"><a class="nav__list-btn" href="#" title="">Home</a></li>
-                <li class="nav__list-item"><a class="nav__list-btn" href="#" title="">What we do</a></li>
-                <li class="nav__list-item"><a class="nav__list-btn" href="#" title="">Who we are</a></li>
+                <li class="nav__list-item"><a class="nav__list-btn" href="/" title="">Home</a></li>
+                <li class="nav__list-item"><a class="nav__list-btn" href="do.html" title="">What we do</a></li>
+                <li class="nav__list-item"><a class="nav__list-btn" href="are.html" title="">Who we are</a></li>
               </ul>
             </div>
           </div>
@@ -102,8 +102,38 @@
       <!-- SECTION stand :: END-->
       <!-- SECTION network :: START-->
       <section class="network" id="network">
-        <div class="c-grid">
-          <div class="network__wrapper"></div>
+        <div class="network__wrapper">
+          <div class="network__row network__row-0">
+            <div class="network__row__bg"></div>
+            <div class="c-grid">
+              <h2 class="network__title c-title">LONDON-BASED, <span class='c-title--color'>GLOBAL NETWORK</span></h2>
+            </div>
+          </div>
+          <div class="network__row network__row-1">
+            <div class="c-grid">
+              <div class="network__block-wrapper">
+                <div class="network__block network__block-0">
+                  <p class="network__block-count viewport-hide-js"><span data-from="0" data-to="70" data-speed="1500" data-refresh-interval="50" network-num-js>100</span>%
+                  </p>
+                  <p class="network__block-desc">EUROPE</p>
+                </div>
+                <div class="network__block network__block-1">
+                  <p class="network__block-count viewport-hide-js"><span data-from="0" data-to="20" data-speed="1500" data-refresh-interval="50" network-num-js>100</span>%
+                  </p>
+                  <p class="network__block-desc">ASIA</p>
+                </div>
+                <div class="network__block network__block-2">
+                  <p class="network__block-count viewport-hide-js"><span data-from="0" data-to="10" data-speed="1500" data-refresh-interval="50" network-num-js>100</span>%
+                  </p>
+                  <p class="network__block-desc">OTHER</p>
+                </div>
+                <div class="network__block network__block-3">
+                  <p class="network__block-count viewport-hide-js"><span data-from="0" data-to="60" data-speed="1500" data-refresh-interval="50" network-num-js>100</span></p>
+                  <p class="network__block-desc">COUNTRIES</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- SECTION network :: END-->
@@ -165,9 +195,9 @@
           <div class="footer__wrapper-right">
             <div class="nav nav--footer">
               <ul class="nav__list">
-                <li class="nav__list-item"><a class="nav__list-btn" href="#" title="">Home</a></li>
-                <li class="nav__list-item"><a class="nav__list-btn" href="#" title="">What we do</a></li>
-                <li class="nav__list-item"><a class="nav__list-btn" href="#" title="">Who we are</a></li>
+                <li class="nav__list-item"><a class="nav__list-btn" href="/" title="">Home</a></li>
+                <li class="nav__list-item"><a class="nav__list-btn" href="do.html" title="">What we do</a></li>
+                <li class="nav__list-item"><a class="nav__list-btn" href="are.html" title="">Who we are</a></li>
               </ul>
             </div>
           </div>
