What we do page - create community section - w\ adaptive.

--- a/dest/do.html
+++ b/dest/do.html
@@ -140,7 +140,25 @@
       <!-- SECTION community :: START-->
       <section class="community" id="community">
         <div class="c-grid">
-          <div class="community__wrapper"></div>
+          <div class="community__wrapper">
+            <div class="community__wrapper-left">
+              <h2 class="community__title c-title">PRE-REGISTER NOW</h2>
+              <p class="community__desc">Our success is founded on the diversity of our community. Associates hold a variety of nationalities and the remarkable thing about our crowdsourcing model is that you can be working on projects from anywhere in the world, at any time, all with a web connection.</p><a class="community__btn c-btn c-btn--bg" href="#" title="">PRE-REGISTER</a>
+              <p class="community__info">Applications open <span>12/02/2019</span></p>
+            </div>
+            <div class="community__wrapper-right">
+              <div class="community__block">
+                <div class="community__block-top">
+                  <p class="community__block-title">Community Contacts</p>
+                  <div class="community__block-img"><img src="./img/img-community-user.png" srcset="./img/img-community-user@2x.png 2x" alt="" title=""></div>
+                </div>
+                <div class="community__block-bottom">
+                  <p class="community__block-name">James Good</p>
+                  <p class="community__block-pos">Community Manager</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- SECTION community :: END-->
