What we do page - create touch section - w\ adaptive.

--- a/dest/do.html
+++ b/dest/do.html
@@ -165,7 +165,47 @@
       <!-- SECTION touch :: START-->
       <section class="touch" id="touch">
         <div class="c-grid">
-          <div class="touch__wrapper"></div>
+          <div class="touch__wrapper">
+            <div class="touch__wrapper-left">
+              <h2 class="touch__title c-title">Get in touch</h2>
+              <p class="touch__desc">If you are interested in finding out more about Outsmart Insight, get in touch</p>
+              <div class="touch__form">
+                <div class="touch__form-field touch__form-field--input">
+                  <label for="touch_name">Name</label>
+                  <input type="text" placeholder="Please enter your name" name="" id="touch_name">
+                </div>
+                <div class="touch__form-field touch__form-field--input">
+                  <label for="touch_name">Email</label>
+                  <input type="text" placeholder="Please enter your email address" name="" id="touch_email">
+                </div>
+                <div class="touch__form-field touch__form-field--textarea">
+                  <label for="touch_name">Message</label>
+                  <textarea name="" placeholder="Please enter your message" id="touch_message"></textarea>
+                </div>
+                <div class="touch__form-field touch__form-field--btn">
+                  <button class="c-btn c-btn--bg" type="submit">send</button>
+                </div>
+              </div>
+            </div>
+            <div class="touch__wrapper-right">
+              <div class="touch__block touch__block-0">
+                <div class="touch__block-left">
+                  <div class="touch__block-map"></div>
+                </div>
+                <div class="touch__block-right">
+                  <p>Outsmart Insight Ltd<br>First Floor<br>67-69 George Street<br>London W1U 8LT</p>
+                </div>
+              </div>
+              <div class="touch__block touch__block-1">
+                <div class="touch__block-left">
+                  <div class="touch__block-map"></div>
+                </div>
+                <div class="touch__block-right">
+                  <p>Outsmart Insight Ltd<br>LABS Atrium<br>Chalk Farm Rd<br>London, NW1 8AH</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- SECTION touch :: END-->
