What we do page - create stand section - w\ adaptive.

--- a/dest/do.html
+++ b/dest/do.html
@@ -95,8 +95,39 @@
       <!-- SECTION main :: END-->
       <!-- SECTION stand :: START-->
       <section class="stand" id="stand">
-        <div class="c-grid">
-          <div class="stand__wrapper"></div>
+        <div class="stand__wrapper">
+          <div class="stand__row stand__row-0">
+            <div class="swiper-container swiper-container-stand">
+              <div class="swiper-wrapper">
+                            <div class="swiper-slide"></div>
+                            <div class="swiper-slide"></div>
+                            <div class="swiper-slide"></div>
+                            <div class="swiper-slide"></div>
+                            <div class="swiper-slide"></div>
+                            <div class="swiper-slide"></div>
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+          <div class="stand__row stand__row-1">
+            <div class="c-grid">
+              <h2 class="stand__title c-title">WHAT WE STAND FOR</h2>
+              <div class="stand__block-wrapper">
+                <div class="stand__block stand__block-0">
+                  <p class="stand__block-title">Rigour and ingenuity</p>
+                  <p class="stand__block-desc">Our clients recognise that it is the quality of our work that sets us apart; a reputation built on the highest standards of scientific enquiry and critical analysis in emerging technology areas. Be prepared to put your intelligence, rigour and ingenuity to the test.</p>
+                </div>
+                <div class="stand__block stand__block-1">
+                  <p class="stand__block-title">Independent thinking</p>
+                  <p class="stand__block-desc">The bedrock of this network are the motivated self starters who populate it. We look for independent thinkers - experts in their field who aren’t afraid to formulate their own opinions and go beyond the brief, whether working individually or as part of a multidisciplinary team. </p>
+                </div>
+                <div class="stand__block stand__block-2">
+                  <p class="stand__block-title">Fair play, teamwork</p>
+                  <p class="stand__block-desc">The quality of our work is only as good as the sum of our Associates' contributions. That's why every place on a project team matters - we are a network of partners. There is no boss, no hierarchy and no bureaucracy. Play fair in teams and you will thrive</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- SECTION stand :: END-->
