Who We Are page - add mapping section - w\ adaptive.

--- a/dest/are.html
+++ b/dest/are.html
@@ -76,7 +76,110 @@
       </div>
     </header>
     <!-- HEADER :: END-->
-    <div class="body p-are"></div>
+    <div class="body p-are">
+      <!-- SECTION main :: START-->
+      <section class="a-main" id="a-main">
+        <div class="c-grid">
+          <div class="a-main__wrapper"></div>
+        </div>
+      </section>
+      <!-- SECTION main :: END-->
+      <!-- SECTION collective :: START-->
+      <section class="collective" id="collective">
+        <div class="c-grid">
+          <div class="collective__wrapper"></div>
+        </div>
+      </section>
+      <!-- SECTION collective :: END-->
+      <!-- SECTION expertise :: START-->
+      <section class="expertise" id="expertise">
+        <div class="c-grid">
+          <div class="expertise__wrapper"></div>
+        </div>
+      </section>
+      <!-- SECTION expertise :: END-->
+      <!-- SECTION work :: START-->
+      <section class="work" id="work">
+        <div class="c-grid">
+          <div class="work__wrapper"></div>
+        </div>
+      </section>
+      <!-- SECTION work :: END-->
+      <!-- SECTION mapping :: START-->
+      <section class="mapping" id="mapping">
+        <div class="c-grid">
+          <div class="mapping__wrapper mapping__wrapper-0">
+            <div class="mapping__tabs"><a class="mapping__tabs-btn mapping__tabs-btn--1 is-active" href="#" title="" data-btn-id="1">Mapping</a><a class="mapping__tabs-btn mapping__tabs-btn--2" href="#" title="" data-btn-id="2">TRACKING</a><a class="mapping__tabs-btn mapping__tabs-btn--3" href="#" title="" data-btn-id="3">FORECASTING</a></div>
+          </div>
+          <div class="mapping__wrapper mapping__wrapper-1">
+            <div class="mapping__content mapping__content-1 is-active" data-content="1">
+              <div class="mapping__content-left">
+                <div class="mapping__content-img"></div>
+              </div>
+              <div class="mapping__content-right">
+                <p class="mapping__content-title c-title">CASE STUDY: <span class='c-title--color'>MAPPING</span></p>
+                <p class="mapping__content-text mapping__content-text--pb">A market research and technology intelligence client required a detailed assessment of the impact of graphene and carbon nanotubes on next-generation battery technologies.</p>
+                <p class="mapping__content-text">Through research and analysis of highly-cited, peer-reviewed journals, the team was able to provide deep technical specifications and add vital context relating to manufacturing processes, impurities, percentage loading and life cycles.</p>
+                <div class="mapping__content-review">
+                  <p>I was able to decide how much to contribute for each project depending on the workload of my PhD.</p>
+                </div>
+                <div class="swiper-slide-user swiper-slide-user--dark">
+                  <div>
+                    <div class="swiper-slide-circle"><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+                  </div>
+                  <div>
+                    <p>David Davidson</p><span>PHD Student, Bioengineering, Imperial College London</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="mapping__content mapping__content-1" data-content="2">
+              <div class="mapping__content-left">
+                <div class="mapping__content-img"></div>
+              </div>
+              <div class="mapping__content-right">
+                <p class="mapping__content-title c-title">CASE STUDY: <span class='c-title--color'>MAPPING</span></p>
+                <p class="mapping__content-text mapping__content-text--pb">A market research and technology intelligence client required a detailed assessment of the impact of graphene and carbon nanotubes on next-generation battery technologies.</p>
+                <p class="mapping__content-text">Through research and analysis of highly-cited, peer-reviewed journals, the team was able to provide deep technical specifications and add vital context relating to manufacturing processes, impurities, percentage loading and life cycles.</p>
+                <div class="mapping__content-review">
+                  <p>I was able to decide how much to contribute for each project depending on the workload of my PhD.</p>
+                </div>
+                <div class="swiper-slide-user swiper-slide-user--dark">
+                  <div>
+                    <div class="swiper-slide-circle"><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+                  </div>
+                  <div>
+                    <p>David Davidson</p><span>PHD Student, Bioengineering, Imperial College London</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="mapping__content mapping__content-1" data-content="3">
+              <div class="mapping__content-left">
+                <div class="mapping__content-img"></div>
+              </div>
+              <div class="mapping__content-right">
+                <p class="mapping__content-title c-title">CASE STUDY: <span class='c-title--color'>MAPPING</span></p>
+                <p class="mapping__content-text mapping__content-text--pb">A market research and technology intelligence client required a detailed assessment of the impact of graphene and carbon nanotubes on next-generation battery technologies.</p>
+                <p class="mapping__content-text">Through research and analysis of highly-cited, peer-reviewed journals, the team was able to provide deep technical specifications and add vital context relating to manufacturing processes, impurities, percentage loading and life cycles.</p>
+                <div class="mapping__content-review">
+                  <p>I was able to decide how much to contribute for each project depending on the workload of my PhD.</p>
+                </div>
+                <div class="swiper-slide-user swiper-slide-user--dark">
+                  <div>
+                    <div class="swiper-slide-circle"><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+                  </div>
+                  <div>
+                    <p>David Davidson</p><span>PHD Student, Bioengineering, Imperial College London</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION mapping :: END-->
+    </div>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
       <div class="c-grid">
