Who We Are page - add collective section - w\ adaptive.

--- a/dest/are.html
+++ b/dest/are.html
@@ -87,7 +87,26 @@
       <!-- SECTION collective :: START-->
       <section class="collective" id="collective">
         <div class="c-grid">
-          <div class="collective__wrapper"></div>
+          <div class="collective__wrapper">
+            <div class="collective__wrapper-left"><img src="./img/img-collective-pc.png" srcset="./img/img-collective-pc@2x.png 2x" alt="" title=""></div>
+            <div class="collective__wrapper-right">
+              <h2 class="collective__title c-title"><span class='c-title--color'>COLLECTIVE</span> INTELLIGENCE</h2>
+              <p class="collective__desc collective__desc--pb">Almost all important problems are solved by groups of people rather than individuals alone. We believe that by working together in large teams we can deliver insight more intelligently, creatively and quickly than ever before possible.</p>
+              <p class="collective__desc">Our vision is to redefine the way knowledge-work is done – investing in people and technology to develop, for the first time, truly effective crowdsourced research practices.</p>
+              <div class="are__block">
+                <div>
+                  <div class="are__block-circle"><i></i></div>
+                </div>
+                <div><span>Be part of a global, multidisciplinary network</span></div>
+              </div>
+              <div class="are__block">
+                <div>
+                  <div class="are__block-circle"><i></i></div>
+                </div>
+                <div><span>Work collaboratively with brilliant, likeminded experts</span></div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- SECTION collective :: END-->
